# qa-fork-1770496633-poetry_conflict_tool_vs_pyproject

./: .whitesource  README.md  autotest_config.json  pyproject.toml
